revert to older version to fix broken css

--- a/css/notes.css
+++ b/css/notes.css
@@ -180,6 +180,7 @@
   }
   
   .sub-section-image {
+    /*transform: rotate(25deg);*/
     max-width: 70%;
     max-height: 70%;
     padding: 3rem;
@@ -308,83 +309,4 @@
 
 .side-navigation a:hover {
     background-color: rgba(255, 255, 255, 0.2);
-}
-
-/* Mobile responsiveness */
-@media (max-width: 1110px) {
-    .side-navigation {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: 9999;  /* Make sure it appears on top of other content */
-        display: none;  /* Hidden by default */
-        overflow-y: auto;  /* Allow scrolling if the content is long */
-        background-color: rgba(0,0,0,0.9);  /* Slight transparency */
-    }
-
-    .toggle-sidebar-button {
-        display: block;  /* Shown by default */
-        position: fixed;
-        top: 20px;
-        left: 20px;
-        z-index: 10000;  /* Always on top */
-        background-color: #252526;
-        color: #fff;
-        padding: 10px 15px;
-        border: none;
-        cursor: pointer;
-    }
-
-    .close-sidebar-button {
-        display: block;  /* Shown by default */
-        position: absolute;
-        top: 20px;
-        right: 20px;
-        background-color: #252526;
-        color: #fff;
-        padding: 10px 15px;
-        border: none;
-        cursor: pointer;
-    }
-}
-
-/* For larger devices, hide the toggle and close buttons */
-@media (min-width: 1110px) {
-    .toggle-sidebar-button,
-    .close-sidebar-button {
-        display: none;
-    }
-}
-
-/* Mobile-specific styles for the on-page navigation */
-@media only screen and (max-width: 768px) {
-    .side-navigation {
-        position: fixed;
-        top: 0;
-        right: -80%; /* Initially hidden, only 20% visible as a tab */
-        width: 80%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.8);
-        overflow-y: scroll;
-        transition: right 0.3s;
-    }
-
-    .side-navigation.open {
-        right: 0; /* Fully visible when open */
-    }
-
-    .toggle-sidebar-button {
-        position: fixed;
-        top: 20px;
-        right: 20px;
-        z-index: 1000; /* Ensure it's on top */
-    }
-
-    .close-sidebar-button {
-        position: absolute;
-        top: 10px;
-        left: 10px;
-    }
 }
